# model_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md
assets/pudge/: pudge.mtl
assets/pudge/materials/: pudge_arms_detailMask.tga  pudge_arms_diffuseWarpMask.tga  pudge_arms_metalnessMask.tga  pudge_arms_normal.tga  pudge_arms_rimMask.tga  pudge_arms_selfIllumMask.tga  pudge_arms_specularExponent.tga  pudge_arms_specularMask.tga  pudge_arms_tintByBaseMask.tga  pudge_arms_translucency.tga  pudge_back_detailMask.tga  pudge_back_diffuseWarpMask.tga  pudge_back_metalnessMask.tga  pudge_back_normal.tga  pudge_back_rimMask.tga  pudge_back_selfIllumMask.tga  pudge_back_specularExponent.tga  pudge_back_specularMask.tga  pudge_back_tintByBaseMask.tga  pudge_belt_detailMask.tga  pudge_belt_diffuseWarpMask.tga  pudge_belt_metalnessMask.tga  pudge_belt_normal.tga  pudge_belt_rimMask.tga  pudge_belt_selfIllumMask.tga  pudge_belt_specularExponent.tga  pudge_belt_specularMask.tga  pudge_belt_tintByBaseMask.tga  pudge_belt_translucency.tga  pudge_head_detailMask.tga  pudge_head_diffuseWarpMask.tga  pudge_head_metalnessMask.tga  pudge_head_normal.tga  pudge_head_rimMask.tga  pudge_head_selfIllumMask.tga  pudge_head_specularExponent.tga  pudge_head_specularMask.tga  pudge_head_translucency.tga  pudge_offhand_detailMask.tga  pudge_offhand_diffuseWarp.tga  (+29 more)
src/: Game.cpp  Game.h  main.cpp
src/engine/: Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  stb_image.h
src/engine/gl/: Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  (+13 more)
src/math/: cramer.py  math.h
